--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
