--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-paginate": "^8.1.4"
+    "react-paginate": "^8.1.4",
+    "react-rating-stars-component": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
