--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
     "react-rating-stars-component": "^2.2.0"
