--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
-    "react-rating-stars-component": "^2.2.0"
+    "react-rating-stars-component": "^2.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
